sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: not found: value int
	int val1 = getValeur(i);
        ^AlgBubbleSort1:5: error: not found: value int
	int val2 = getValeur(i+1)
        ^AlgBubbleSort1:6: error: not found: value val1
	if (val1>val2){
            ^