sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
for( i <- 0 to getNombreValeurs() ){
	int val1 = getValeur(i);
	int val2 = getValeur(i+1)
	if (val1>val2){
		echange(i,i+1)
	}
	i+1
}
}
